# URCL-LSP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: .cmake-multi-platform.yml.swp  cmake-multi-platform.yml
src/: main.cpp  util.cpp  util.h
src/urcl/: .source.cpp.swp  .source.h.swp  config.cpp  config.h  defines.h  source.cpp  source.h  token.h
